@@ -48,7 +48,7 @@ public class TrickBuilder {
         }
 
         if (cards.size() == 1) {
-            var card = cards.get(0);
+            var card = cards.getFirst();
             if (card instanceof DogCard) {
                 trickType = TrickType.DOG;
             } else if (prevTrick == null || prevTrick.getType() == TrickType.SINGLE) {
@@ -65,12 +65,13 @@ public class TrickBuilder {
                 trickType = TrickType.THREE_OF_A_KIND;
             }
             return trickType;
-        } else if (cards.size() == 4) {
-            if (FourOfAKindTrick.isFourOfAKindTrick(cards)) {
-                trickType = TrickType.FOUR_OF_A_KIND;
-            }
-            return trickType;
         } else {
+            if (cards.size() == 4) {
+                if (FourOfAKindTrick.isFourOfAKindTrick(cards)) {
+                    trickType = TrickType.FOUR_OF_A_KIND;
+                    return trickType;
+                }
+            }
             if (cards.size() == 5) {
                 if (FullHouseTrick.isFullHouseTrick(cards)) {
                     trickType = TrickType.FULL_HOUSE;
